--- a/pages/index.html
+++ b/pages/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <header>
-    <img class="icon" src="/icon/icon.png">
+    <img class="icon" src="./icon.png">
   </header>
   <div class="container">
     <div id="error">
