--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shortener</title>
-  <link rel="shortcut icon" href="../icon/icon.png" type="image/png">
+  <link rel="shortcut icon" href="../icon.png" type="image/png">
   <style>
     body { 
       background-color: #414141; 
@@ -57,7 +57,7 @@
 </head>
 <body>
   <header>
-    <img class="icon" src="./icon.png">
+    <img class="icon" src="../icon.png">
   </header>
   <div class="container">
     <div id="error">
@@ -68,6 +68,6 @@
     <input type="text" id="customCode" placeholder="enter a slug"><br><br><br>
     <button id="create" class="create">Create</button>
   </div>
-  <script src="../scripts/shortener.js"></script>
+  <script src="../../scripts/shortener.js"></script>
 </body>
 </html>
