--- a/pages/landing.html
+++ b/pages/landing.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shortener</title>
-  <link rel="shortcut icon" href="../icon/icon.png" type="image/png">
-  <script src="../scripts/urlReader.js" defer></script>
+  <link rel="shortcut icon" href="../icon.png" type="image/png">
+  <script src="../../scripts/urlReader.js" defer></script>
   <style>
     body { 
       background-color: #414141; 
